# Voyalier

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTES.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tokens.css
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  packs.yml  release.yml  security-hygiene.yml
.hallmark/: log.json  preflight.json
.remember/: now.md  today-2026-07-17.md
.remember/tmp/: last-ndc.ts  last-save-ts  last-save.json
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  a11y.test.tsx  aboutPlace.test.tsx  aiPromptSettings.test.tsx  aiProviders.test.tsx  assistDraft.test.tsx  assistPreview.test.tsx  backupPanel.test.tsx  brief.test.tsx  cityPacks.test.tsx  combobox.test.tsx  dataSources.test.tsx  deferredSection.test.tsx  deleteConfirm.test.tsx  destinationFacts.test.tsx  documents.test.tsx  errorStates.test.tsx  flowFixes.test.tsx  fonts.css  fullLoop.test.tsx  hardening.test.tsx  importDialog.test.tsx  injection.test.tsx  localeSettings.test.tsx  main.tsx  mapPanel.test.tsx  onDeviceAi.test.tsx  parity.test.ts  performance.test.tsx  placeSuggestions.test.tsx  planningWorkflows.test.tsx  publicHolidays.test.tsx  readiness.test.tsx  recommendations.test.tsx  review.keyboard.test.tsx  routeParity.test.ts  sampleTrip.test.tsx  scheduleCheck.test.tsx  sectionNav.test.tsx  (+13 more)
apps/web/src/app/: context.ts  format.test.ts  format.ts  i18n.test.ts  i18n.ts  ics.test.ts  ics.ts  locale.ts  (+9 more)
crates/voyalier-app/: Cargo.toml
crates/voyalier-app/src/: lib.rs  records.rs  snapshots.rs
crates/voyalier-core/: Cargo.toml
crates/voyalier-core/examples/: pack_catalog.rs
crates/voyalier-core/fixtures/parser/injection-inert/: expected.json  input.txt
crates/voyalier-core/fixtures/parser/jsonld-flight/: expected.json  input.html
crates/voyalier-core/fixtures/parser/jsonld-graph/: expected.json  input.html
crates/voyalier-core/fixtures/parser/jsonld-lodging/: expected.json  input.html
crates/voyalier-core/fixtures/parser/jsonld-multiple/: expected.json  input.html
crates/voyalier-core/fixtures/parser/malformed-empty/: expected.json
crates/voyalier-core/fixtures/parser/malformed-invalid-jsonld/: expected.json  input.html
crates/voyalier-core/fixtures/parser/malformed-truncated-html/: expected.json  input.html
crates/voyalier-core/fixtures/parser/plaintext-arrow/: expected.json  input.txt
crates/voyalier-core/fixtures/parser/plaintext-missing-dates/: expected.json  input.txt
crates/voyalier-core/fixtures/parser/plaintext-unicode-arrow/: expected.json  input.txt
crates/voyalier-core/src/: advice.rs  advisories.rs  airports.rs  alerts.rs  assist.rs  assist_draft.rs  astro.rs  backup.rs  brief.rs  climate.rs  email.rs  facts.rs  gazetteer.rs  heritage.rs  holidays.rs  itinerary.rs  lib.rs  local_ai.rs  packing.rs  packs.rs  parser.rs  place_summary.rs  planning.rs  provider.rs  readiness.rs  recommend.rs  schema_validation.rs  search.rs  source.rs  suggest.rs  tests.rs  tipping.rs  today.rs  types.rs  vault.rs  weather.rs
crates/voyalier-core/src/data/: airports.csv  cities.tsv  countries.tsv  whs.tsv
crates/voyalier-server/: Cargo.toml
crates/voyalier-server/src/: lib.rs  main.rs
docs-site/: astro.config.mjs  package.json
docs-site/src/: pagefind-ui.d.ts
docs-site/src/components/: FoldedRouteArtifact.astro  Search.astro  ThemeToggle.astro
docs-site/src/fonts/: OFL.txt
docs-site/src/pages/: index.astro
docs-site/src/styles/: custom.css  fonts.css  landing.css
docs/architecture/: ADR-0001-system-shape.md  ADR-0002-desktop-transport.md  ADR-0003-phase2-contract.md  ADR-0004-mock-parity.md  ADR-0005-user-owned-planning.md  ARCHITECTURE.md  MAPS.md  PHASE1_CORE.md  RETRIEVED_SNAPSHOTS.md  UPDATES.md
docs/data/: DATA_SOURCES.md
docs/design/: DESIGN_SYSTEM.md  PHASE1_UX.md
docs/product/: APP_AUDIT_AND_POLISH_PLAN.md  IMPLEMENTATION_PROMPTS.md  PRODUCT_BRIEF.md
docs/release/: RELEASE_CHECKLIST.md  v0.3.0-release-notes-template.md  v0.4.0-release-notes.md  v0.5.0-release-notes.md  v0.5.1-release-notes.md
docs/research/: FABLE_RESEARCH_BRIEF.md
docs/roadmap/: OPEN_DATA_FEATURE_CANDIDATES.md  ROADMAP.md
docs/security/: THREAT_MODEL.md  UPDATE_KEY_RUNBOOK.md
docs/superpowers/plans/: 2026-07-17-advisories-seam 2.md  2026-07-17-advisories-seam.md  2026-07-17-airports-feature.md  2026-07-17-facts-seam.md  2026-07-17-gazetteer-feature.md  2026-07-17-roadmap-completion.md  2026-07-17-time-difference-feature.md  2026-07-17-weather-seam.md  2026-07-18-route-parity-guard.md  2026-07-18-workspace-backup-restore.md  2026-07-19-trust-and-integration-hardening.md  2026-07-20-cinematic-website-refresh.md  2026-07-20-hero-punctuation-fix.md  2026-07-20-public-site-theme-toggle.md  2026-07-20-v0.5.0-planning-workflows.md  2026-07-21-audited-user-flow-repairs.md  2026-07-21-v0.5.1-userflow-reliability.md
docs/superpowers/specs/: 2026-07-16-download-docs-design.md  2026-07-18-route-parity-guard-design.md
docs/testing/: TEST_STRATEGY.md
e2e/: planning.spec.ts
scripts/: bootstrap.sh  build-offline-map.mjs  build-offline-map.test.mjs  build-packs.mjs  check-live-http.sh  check.sh  start-playwright-server.sh  write-release-checksums.mjs
workflows/: add-manual-trip-items.md  cinematic-website-refresh.md  find-across-workspace.md  prepare-offline-city-map.md  prepare-packing-checklist.md  review-data-sources.md  save-discoveries.md  use-localized-interface.md
(+86 files in other folders)
