[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/voyalier-core",
  "crates/voyalier-server",
]
default-members = [
  "crates/voyalier-core",
  "crates/voyalier-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/udhawan97/Voyalier"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
