[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/voyalier-app",
  "crates/voyalier-core",
  "crates/voyalier-server",
]
default-members = [
  "crates/voyalier-app",
  "crates/voyalier-core",
  "crates/voyalier-server",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/udhawan97/Voyalier"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
directories = "6"
http = "1"
jiff = { version = "0.2", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
