[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/voyalier-app",
  "crates/voyalier-core",
  "crates/voyalier-server",
]
default-members = [
  "crates/voyalier-app",
  "crates/voyalier-core",
  "crates/voyalier-server",
]

[workspace.package]
version = "0.4.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/udhawan97/Voyalier"
rust-version = "1.85"

# Argon2 is memory-hard by design; unoptimized it is ~1000x slower, which would
# make the test suite take many minutes. Optimize just the crypto crates in dev
# and test builds — the security parameters are unchanged, only the code speed.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
[profile.test.package.argon2]
opt-level = 3
[profile.test.package.blake2]
opt-level = 3

[workspace.dependencies]
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
chacha20poly1305 = { version = "0.11", default-features = false, features = ["alloc"] }
directories = "6"
getrandom = "0.2"
http = "1"
jiff = { version = "0.2", features = ["serde"] }
quick-xml = "0.41"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
