[package]
name = "voyalier-app"
description = "Application services and local SQLite storage for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
directories.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
voyalier-core = { path = "../voyalier-core" }
