[package]
name = "voyalier-core"
description = "Domain types and deterministic product rules for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
