[package]
name = "voyalier-server"
description = "Loopback-only Axum API and local web runtime for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
voyalier-app = { path = "../voyalier-app" }
voyalier-core = { path = "../voyalier-core" }

[dev-dependencies]
tower.workspace = true
