[package]
name = "voyalier-desktop"
description = "Tauri desktop shell for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "voyalier_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum.workspace = true
tauri = { version = "2", features = [] }
tokio.workspace = true
tracing.workspace = true
voyalier-server = { path = "../../../crates/voyalier-server" }
