[package]
name = "voyalier-desktop"
description = "Tauri desktop shell for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "voyalier_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
tauri = { version = "2", features = [] }
voyalier-app = { path = "../../../crates/voyalier-app" }
voyalier-core = { path = "../../../crates/voyalier-core" }

[dev-dependencies]
serde_json.workspace = true
tauri = { version = "2", features = ["test"] }
