[package]
name = "voyalier-desktop"
description = "Tauri desktop shell for Voyalier."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "voyalier_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
voyalier-app = { path = "../../../crates/voyalier-app" }
voyalier-core = { path = "../../../crates/voyalier-core" }

# In-app updates (desktop only). The endpoint + pubkey are fixed in
# tauri.conf.json and the plugin is driven by our own Rust command wrappers, so
# the webview never gets the updater capability (no caller-supplied proxy or
# headers → no hidden network path).
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

# Native save/open pickers for workspace backup and restore. The webview never
# gets the dialog capability either: these are driven from our own Rust command
# wrappers, which hand back only a path and do the file IO themselves.
tauri-plugin-dialog = "2"

[dev-dependencies]
serde_json.workspace = true
tauri = { version = "2", features = ["test"] }
